--- a/config/item-service-dev.yml
+++ b/config/item-service-dev.yml
@@ -16,3 +16,11 @@ spring:
     config:
       override-none: true
       
+      
+spring:
+  rabbitmq:
+    host: 192.168.64.140
+    port: 5672
+    username: admin
+    password: admin
+ 
