--- a/config/zuul-dev.yml
+++ b/config/zuul-dev.yml
@@ -40,3 +40,12 @@ spring:
     config:
       override-none: true
  
+ 
+ 
+spring:
+  rabbitmq:
+    host: 192.168.64.140
+    port: 5672
+    username: admin
+    password: admin
+
