--- a/config/zuul-dev.yml
+++ b/config/zuul-dev.yml
@@ -1,21 +1,34 @@
 spring:
   application:
     name: zuul
-    
+  cloud:
+    config:
+      override-none: true
+  rabbitmq:
+    host: 192.168.64.140
+    port: 5672
+    username: admin
+    password: admin
+       
 server:
   port: 3001
   
 eureka:
   client:
     service-url:
-      defaultZone: http://eureka1:2001/eureka, http://eureka2:2002/eureka
+      defaultZone: http://eureka1:2001/eureka,http://eureka2:2002/eureka
 
+# routes:
+   # item-service: /item-service/**
+   # user-service: /user-service/**
+   # order-service: /order-service/**
+   
 zuul:
   retryable: true
-    
+  
 ribbon:
   ConnectTimeout: 1000
-  ReadTimeout: 2000
+  ReadTimeout: 1000
   MaxAutoRetriesNextServer: 1
   MaxAutoRetries: 1
   
@@ -26,24 +39,3 @@ hystrix:
         isolation:
           thread:
             timeoutInMilliseconds: 500
-            
-          
-management:
-  endpoints:
-    web:
-      exposure:
-        include: hystrix.stream
- 
- 
-
-  cloud:
-    config:
-      override-none: true
- 
- 
-  rabbitmq:
-    host: 192.168.64.140
-    port: 5672
-    username: admin
-    password: admin
-
